[package]
name = "quickjs_regex"
version = "0.2.2"
edition = "2018"
build = 'build.rs'
authors = ['hjiayz <hjiayz@163.com>']
license = 'MIT OR Apache-2.0'
description = 'quickjs libregexp'
repository = 'https://github.com/hjiayz/quickjs_regex.git'

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[workspace]
members = [ "quickjs_regex_derive" ]