[package]
name = "quickjs_regex_derive"
version = "0.1.1"
edition = "2021"
authors = ['hjiayz <hjiayz@163.com>']
license = 'MIT OR Apache-2.0'
description = 'quickjs libregexp'
repository = 'https://github.com/hjiayz/quickjs_regex.git'

[dependencies]
syn = { version = "1.0.81", features = ["full"] }
quote = "1.0"
quickjs_regex_backend = { path = "../quickjs_regex_backend" }
proc-macro2 = "1.0.32"
proc-macro-crate = "1.1.0"

[lib]
proc-macro = true
